# tll_rocket

./: .gitignore  Cargo.toml  Rocket.toml
migrations/2023-07-07-133943_create_users/: up.sql
src/: diesel_sqlite.rs  main.rs  schema.rs
static/: fais.html  index.html  register.html  style.css
