[package]
name = "Rocket_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_contrib = "0.4.11"
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
diesel_migrations = "2.0.0"
serde = "1.0"
serde_json = "1.0"


[dependencies.rocket_sync_db_pools]
version = "=0.1.0-rc.3"
features = ["diesel_sqlite_pool", "sqlite_pool"]